[gd_scene load_steps=17 format=3 uid="uid://3xsovfg5vqyt"]

[ext_resource type="Script" uid="uid://i02x5ha2jljy" path="res://ui.gd" id="1_ibotj"]
[ext_resource type="FontFile" uid="uid://c2evp0lb2lg4v" path="res://assets/fonts/CherryBombOne-Regular.ttf" id="1_nltto"]
[ext_resource type="Texture2D" uid="uid://cchx8b0jtunqm" path="res://assets/img/reset-svgrepo-com.svg" id="2_ibotj"]
[ext_resource type="Texture2D" uid="uid://dwlxksh3ja74w" path="res://assets/img/reset-svgrepo-com-click.svg" id="3_n5ude"]
[ext_resource type="Script" uid="uid://bumdkcjihpyyk" path="res://progress_bar.gd" id="3_y4yjw"]
[ext_resource type="Texture2D" uid="uid://dfu821w7yg3yu" path="res://assets/img/reset-svgrepo-com-hover.svg" id="4_y4yjw"]
[ext_resource type="AudioStream" uid="uid://ck7wwrpvqbugd" path="res://assets/sfx/win.mp3" id="6_n5ude"]
[ext_resource type="Texture2D" uid="uid://oijc47wte5rv" path="res://assets/img/Cell-T0.svg" id="7_waa4j"]
[ext_resource type="Texture2D" uid="uid://b0vlfvrcekxk5" path="res://assets/img/Cell-T3.svg" id="8_ok7cu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y4yjw"]
bg_color = Color(1, 1, 1, 0)
expand_margin_left = 100.0
expand_margin_top = 100.0
expand_margin_right = 100.0
shadow_color = Color(0.942917, 0.506239, 0.784231, 0.243137)
shadow_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ibotj"]
bg_color = Color(0.63, 0.975333, 1, 0.337255)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n5ude"]
bg_color = Color(0.856716, 0.972644, 0.903754, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y4yjw"]
content_margin_left = 10.0
content_margin_right = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_waa4j"]
bg_color = Color(1, 1, 1, 0)
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0
shadow_color = Color(0.942917, 0.506239, 0.784231, 0.243137)
shadow_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ok7cu"]
bg_color = Color(0.3864, 0.57316, 0.92, 0.607843)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0
shadow_color = Color(0, 0, 0, 0.247059)
shadow_size = 2
shadow_offset = Vector2(4, 6)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_irxef"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_ibotj")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 35

[node name="TopPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_y4yjw")

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TopPanel"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 100
alignment = 1

[node name="C1" type="MarginContainer" parent="MarginContainer/VBoxContainer/TopPanel/TopBar"]
layout_mode = 2
theme_override_constants/margin_top = -10
theme_override_constants/margin_right = -50

[node name="TotalCells" type="Label" parent="MarginContainer/VBoxContainer/TopPanel/TopBar/C1"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_nltto")
theme_override_font_sizes/font_size = 54
text = "1"

[node name="C2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TopPanel/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/TopPanel/TopBar/C2"]
custom_minimum_size = Vector2(500, 20)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_ibotj")
theme_override_styles/fill = SubResource("StyleBoxFlat_n5ude")
max_value = 12.0
value = 1.0
show_percentage = false
script = ExtResource("3_y4yjw")

[node name="Timer" type="Timer" parent="MarginContainer/VBoxContainer/TopPanel/TopBar/C2/ProgressBar"]
wait_time = 0.15
one_shot = true

[node name="CurrentGoal" type="Label" parent="MarginContainer/VBoxContainer/TopPanel/TopBar/C2"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_nltto")
theme_override_font_sizes/font_size = 40
text = "Obtenir 12 cellules"
horizontal_alignment = 1
autowrap_mode = 2

[node name="C3" type="MarginContainer" parent="MarginContainer/VBoxContainer/TopPanel/TopBar"]
layout_mode = 2

[node name="Reset" type="TextureButton" parent="MarginContainer/VBoxContainer/TopPanel/TopBar/C3"]
layout_mode = 2
tooltip_text = "reset"
texture_normal = ExtResource("2_ibotj")
texture_pressed = ExtResource("3_n5ude")
texture_hover = ExtResource("4_y4yjw")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_y4yjw")

[node name="PanelLeft" type="PanelContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_waa4j")

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/PanelContainer/PanelLeft"]
layout_mode = 2
columns = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/PanelContainer/PanelLeft/GridContainer"]
layout_mode = 2
texture = ExtResource("7_waa4j")
expand_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/PanelLeft/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_nltto")
theme_override_font_sizes/font_size = 20
text = "1"

[node name="PanelRight" type="PanelContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_waa4j")

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/PanelContainer/PanelRight"]
layout_mode = 2

[node name="os" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/PanelRight/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_nltto")
theme_override_font_sizes/font_size = 20
text = "Factory speed: 1 cells/s"

[node name="UpgradePanel" type="PanelContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_ok7cu")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/UpgradePanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/UpgradePanel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_irxef")

[node name="LabelTitle" type="Label" parent="MarginContainer/UpgradePanel/MarginContainer/PanelContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_nltto")
theme_override_font_sizes/font_size = 40
text = "Am√©lioration"
horizontal_alignment = 1
uppercase = true

[node name="TextureRect" type="TextureRect" parent="MarginContainer/UpgradePanel/MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("8_ok7cu")
expand_mode = 2

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/UpgradePanel/MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("8_ok7cu")
expand_mode = 2

[node name="LabelUpgrade" type="Label" parent="MarginContainer/UpgradePanel/MarginContainer"]
custom_minimum_size = Vector2(480, 240)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_nltto")
theme_override_font_sizes/font_size = 20
text = "Augmenter la prodution des usines ?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
justification_flags = 170

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/UpgradePanel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 30

[node name="ButtonNo" type="Button" parent="MarginContainer/UpgradePanel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_nltto")
theme_override_font_sizes/font_size = 20
text = "NON"

[node name="ButtonYes" type="Button" parent="MarginContainer/UpgradePanel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_nltto")
theme_override_font_sizes/font_size = 20
text = "OUI"

[node name="Win" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_n5ude")
bus = &"Win"
